--- a/styles.css
+++ b/styles.css
@@ -133,7 +133,8 @@ a.button:hover {
 
 a {
   max-width: 100%;
-  word-break: break-all;
+  word-wrap: break-word;
+  word-break: break-word;
 }
 
 /* Button */
@@ -402,9 +403,10 @@ td {
 }
 
 .skills-list {
-  display: flex;
-  flex-wrap: wrap;
+  display: grid;
+  grid-template-columns: auto auto auto;
   gap: 5rem;
+  margin: 0;
   margin-top: 3rem;
 }
 
@@ -438,6 +440,35 @@ td {
 }
 
 .skills-category-soft-skills ul {
-  flex-direction: column;
+  gap: 0.4rem;
   align-items: flex-start;
+}
+
+.skills-category-soft-skills li {
+  background-color: rgba(255, 255, 255, 0.08);
+  border-radius: 1.5rem;
+  padding: 0.8rem 1.4rem 0.5rem 1.4rem;
+}
+
+footer {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  align-items: center;
+  padding: 2rem 5rem;
+  gap: 2rem;
+  border-top: 1px solid rgba(255, 255, 255, 0.1);
+  background-image: linear-gradient(
+    rgba(255, 255, 255, 0.01),
+    rgba(0, 0, 0, 0)
+  );
+  width: 100%;
+}
+
+footer a {
+  text-decoration: none;
+}
+
+footer a:hover {
+  opacity: 0.6;
 }
