--- a/styles.css
+++ b/styles.css
@@ -236,7 +236,7 @@ button,
 .me-section .me-section__img-background {
   /* min-width: 300px; */
   /* width: 500px; */
-  max-width: 600px;
+  /* max-width: 600px; */
   object-position: bottom;
   margin-left: 2rem;
   height: 115vh;
@@ -450,6 +450,58 @@ td {
   padding: 0.8rem 1.4rem 0.5rem 1.4rem;
 }
 
+.hobbies-section {
+  margin: 1rem 5rem;
+}
+
+.hobby {
+  display: flex;
+  gap: 2rem;
+  margin-top: 1.5rem;
+  border-radius: 1.5rem;
+  padding: 2.3rem 3rem 2rem 3rem;
+  backdrop-filter: blur(20px);
+  background-image: linear-gradient(
+    -45deg,
+    rgba(100, 0, 200, 0.1),
+    rgba(100, 0, 100, 0.1)
+  );
+  flex-direction: column;
+
+  border: 1px solid rgba(255, 255, 255, 0.1);
+}
+
+.hobby svg {
+  max-width: 30px;
+  margin-bottom: 0.2rem;
+}
+
+.hobby h2 {
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+}
+
+.hobby-cinema-social {
+  display: flex;
+  width: max-content;
+  gap: 0.4rem;
+  margin-top: 1.2rem;
+  align-items: center;
+  text-decoration: none;
+  background-color: rgba(255, 255, 255, 0.08);
+  border-radius: 1.5rem;
+  padding: 0.8rem 1.4rem 0.8rem 1.4rem;
+}
+
+.hobby-cinema-social span {
+  margin-top: 0.2rem;
+}
+
+.hobby-cinema-social:hover {
+  opacity: 0.6;
+}
+
 footer {
   display: flex;
   justify-content: center;
@@ -457,6 +509,7 @@ footer {
   align-items: center;
   padding: 2rem 5rem;
   gap: 2rem;
+  margin-top: 3rem;
   border-top: 1px solid rgba(255, 255, 255, 0.1);
   background-image: linear-gradient(
     rgba(255, 255, 255, 0.01),
