--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,25 @@
+@font-face {
+  font-family: "ClashDisplay-Regular";
+  src: url("./assets/fonts/ClashDisplay-Regular.ttf") format("truetype");
+  font-weight: 400;
+  font-display: swap;
+  font-style: normal;
+}
+@font-face {
+  font-family: "ClashDisplay-Medium";
+  src: url("./assets/fonts/ClashDisplay-Medium.ttf") format("truetype");
+  font-weight: 500;
+  font-display: swap;
+  font-style: normal;
+}
+@font-face {
+  font-family: "ClashDisplay-Bold";
+  src: url("./assets/fonts/ClashDisplay-Bold.ttf") format("truetype");
+  font-weight: 700;
+  font-display: swap;
+  font-style: normal;
+}
+
 * {
   font-family: "Epilogue", sans-serif;
   margin: 0;
@@ -6,6 +28,7 @@
   line-height: 1.5;
   color: white;
   user-select: none;
+  -webkit-tap-highlight-color: transparent;
 }
 
 /* Animations */
@@ -56,14 +79,12 @@ body:not(.loading) button {
 
 html,
 body {
-  background: linear-gradient(-45deg, #0c0c16, #160e1d, #1e0e2d) no-repeat;
-  /* background: linear-gradient(-45deg, #0c0c16, #160e1d, #8a18572c, #1e0e2d)
-    no-repeat;
-    background: linear-gradient(-45deg, #0c0c16, #160e1d, #8a1856, #1e0e2d) no-repeat; */
+  /* background: linear-gradient(-45deg, #0c0c16, #160e1d, #1e0e2d) no-repeat; */
 
   /* background: #360033; */
 
-  /* background: linear-gradient(to right, #1c021b, #072c2f); */
+  /* background-color: rgb(15, 15, 15); */
+  background: linear-gradient(to right, #02091c, #0f1a27, #07182f);
 
   background-attachment: fixed;
   scroll-behavior: smooth;
@@ -233,9 +254,11 @@ button.secondary {
 }
 
 .me-section h1 {
+  font-family: "ClashDisplay-Bold";
+  word-spacing: 15px;
   font-size: 4.8rem;
   margin-bottom: 1.2rem;
-  text-shadow: 0 0 200px #7c2b71;
+  text-shadow: 0 0 200px #2b627c;
 }
 
 .me-section .me-section__description {
@@ -244,24 +267,25 @@ button.secondary {
   align-items: center;
   position: absolute;
   transform: translateX(-50%);
-  width: 60%;
+  width: 50%;
   left: 50%;
 }
 
 .me-section .me-section__img-background {
-  /* min-width: 300px; */
-  /* width: 500px; */
-  /* max-width: 600px; */
   object-position: bottom;
   margin-left: 2rem;
   height: 115vh;
   object-fit: contain;
   border-radius: 50%;
-  /* TODO: Blur on scroll */
-  opacity: 0.25;
-  /* filter: blur(8px) !important; */
+  opacity: 0.2;
   margin-right: 2rem;
-  filter: grayscale(50%) brightness(0.8) blur(8px);
+  filter: grayscale(80%) brightness(3) blur(10px);
+  transition: 1s opacity, 2s transform;
+}
+
+.me-section .me-section__img-background:hover {
+  opacity: 0.4;
+  transform: perspective(1000px) rotateX(0deg) rotateY(-4deg);
 }
 
 /* formation section */
@@ -269,19 +293,24 @@ button.secondary {
 .formation-section {
   display: flex;
   flex-direction: column;
-  /* justify-content: space-between; */
   padding: 2.5rem 4rem;
   background: linear-gradient(
       -45deg,
-      rgba(255, 255, 255, 0.08),
-      rgba(194, 161, 225, 0.05)
+      rgba(255, 255, 255, 0.1),
+      rgba(255, 255, 255, 0.02)
     )
     no-repeat;
+
   background-size: 400% 400%;
   border: 1px solid rgba(255, 255, 255, 0.1);
   margin: 0 5rem 0 5rem;
   border-radius: 3rem;
   backdrop-filter: blur(20px);
+}
+
+.card-effect {
+  transform-style: preserve-3d;
+  transition: transform 0.1s ease-out, box-shadow 0.3s ease;
 }
 
 .formation-section i {
@@ -362,6 +391,7 @@ td {
 
 .project-buttons {
   display: flex;
+  flex-wrap: wrap;
   gap: 1rem;
 }
 
@@ -373,6 +403,7 @@ td {
 
 p {
   margin: 0.2rem 0;
+  line-height: 1.6;
   text-align: justify;
 }
 
@@ -393,8 +424,9 @@ p {
 }
 
 .project-screenshots-carousel img {
-  width: 14rem;
-  object-fit: contain;
+  max-width: 20rem;
+  max-height: 20rem;
+  object-fit: cover;
   border-radius: 1rem;
   box-shadow: 0 0 50px rgba(255, 255, 255, 0.08);
   transition: transform 0.5s;
@@ -495,10 +527,10 @@ p {
   border-radius: 1.5rem;
   padding: 2.3rem 3rem 2rem 3rem;
   backdrop-filter: blur(20px);
-  background-image: linear-gradient(
+  background: linear-gradient(
     -45deg,
-    rgba(100, 0, 200, 0.1),
-    rgba(100, 0, 100, 0.1)
+    rgba(255, 255, 255, 0),
+    rgba(255, 255, 255, 0.05)
   );
   flex-direction: column;
 
@@ -575,8 +607,8 @@ footer a:hover {
 }
 
 #image-preview img {
-  width: calc(100% - 2rem);
-  height: calc(100% - 2rem);
+  width: 100%;
+  height: 100%;
   object-fit: contain;
   padding: 1rem;
   border-radius: 10px;
